# approximate-counting-k-paths

./: .gitignore  README.md
Experiments/: bdh_linked_list  bdh_unordered_map  blsz  convergence_bdh_linked_list  convergence_bdh_unordered_map  convergence_blsz  exact_count  measure_bdh_linked_list  measure_bdh_unordered_map  measure_blsz
Experiments/Graph Instances/: generate.py
Experiments/Graph Instances/Random/: R10_0-5.g6  R1280_0-5.g6  R160_0-5.g6  R20_0-5.g6  R320_0-5.g6  R40_0-5.g6  R640_0-5.g6  R80_0-5.g6
Experiments/Plots/: branch-misses-k-4.plt  branch-misses-k-4.tex  cache-misses-k-4.plt  cache-misses-k-4.tex  clock-cycles-k-4.tex  clock-cycles_k_4.plt
Experiments/Plots/BLSZ/Convergence/: convergence-bdh-k3-r10.tex  convergence-blsz-k3-r10.tex  convergence_blsz_R10_0-5_3_2000_1.plt  convergence_blsz_R10_0-5_4_2000_1.plt  convergence_blsz_R10_0-5_5_2000_1.plt  (+21 more)
Experiments/Results/: bdh_linked_list_R320_0-5_3_2000_1.txt  blsz_R160_0-5_3_2000_1.txt  blsz_R320_0-5_3_2000_1.txt
Experiments/Results/Measurements/: bdh_linked_list_k_4.txt  bdh_unordered_map_k_4.txt  blsz_k_4.txt
Source Code/: .gitignore  CMakeLists.txt
Source Code/BDH (Extensor-Coding)/: .gitignore  CMakeLists.txt
Source Code/BDH (Extensor-Coding)/include/bdh/: bdh_graph_reader.hpp  bdh_linked_list.hpp  bdh_unordered_map.hpp
Source Code/BLSZ (Divide-And-Color)/: CMakeLists.txt
Source Code/BLSZ (Divide-And-Color)/include/blsz/: blsz.hpp  blsz_exact.hpp  blsz_graph_reader.hpp
Source Code/Boost/: CMakeLists.txt
Source Code/Experiments/: CMakeLists.txt  bdh_test.cpp  blsz_test.cpp
(+118 files in other folders)
